# mctrader-data

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  compose.yml  pyproject.toml
.architect-output/: ADR-027-amendment-3-draft.md  domain-knowledge-minio-bucket-policy-iam.md
.claude/: QADev_mapping_mct156.md
.claude/_overlay/: CLAUDE.md  project.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  image-lint.yml  phase-gate-mergeable.yml
configs/grafana/: cold_writer_health_dashboard.json
configs/prometheus/: nas_invariant_rules.yml  nas_uploader_rules.yml
deploy/: README.md  mctrader-collector.service
docker/minio/: README.md
docs/adr-drafts/: ADR-009-amendment-N-l1-dual-filename.md  ADR-017-amendment-3-compactor-sort-key.md
docs/audit/: MCT-163-caller-inventory.md  MCT-164-code-audit.md  MCT-164-parity-upbit-vs-bithumb.md  MCT-166-precondition-upbit-ws-capability.md  MCT-173-entry-scan.md  MCT-200-minio-iam-pre-restore-snapshot.md  MCT-200-rc1-verification-2026-05-18.md  MCT-200-ws-a-backfill-verify-2026-05-13-15.md
docs/change-plans/: U3-FIX-keyspace-rekey.md  mct-204-compactor-tick-stall-historical-l1-reclaim.md
docs/post-mortem/: MCT-200-minio-iam-403-incident.md
docs/retros/: 2026-05-17-disk-pressure-incident.md  2026-05-19-mct-204-tick-stall-historical-l1-reclaim.md  MCT-203-nas-get-size-gated-cache-retro-2026-05-19.md  U2-HELPER-retro-2026-05-18.md  U3-MIGRATE-retro-2026-05-18.md  ci-aggregate-job-pattern-k-closure-retro-2026-05-18.md  compactor-sort-key-l1-naming-retro-2026-05-18.md  parse-node-id-suffix-strip-retro-2026-05-18.md
docs/runbooks/: branch-protection-policy.md  minio-bucket-policy-iam-restore.md  ws-a-historical-promotion-operator.md
docs/stories/: INCIDENT-2026-05-17-issue-A-nas-4xx-fail-fast.md  MCT-148.md  MCT-200.md  MCT-201.md  MCT-204.md  U2-HELPER.md  U3-MIGRATE.md  U5-VERIFY.md
docs/upgrade-events/: 2026-05-17-5.81.0.md
scripts/: backfill_entry_scan.py  bithumb_ws_wiretap.py  measure_wal_baseline.py  rekey_l1_migration.py  restore_minio_iam.sh  upbit_wal_diagnostics.py  upbit_ws_capability_probe.py  verify_backfill_partial_loss.py  verify_cross_repo_secret.py  verify_l2_l3_sort_correctness.py  verify_minio_iam_restore.py  verify_upbit_l1_fix.py  verify_ws_a_backfill_mct200.py  wal_freeze.py  wal_recovery_probe.py
scripts/ha/: README.md  deploy.yml
scripts/migration/: rekey_l1_migration.py  run_backfill.py  verify_rpo_zero.py
scripts/minio-policies/: admin.json  list.json  read.json  write.json
scripts/ops/: rotate_minio_secret.py
src/mctrader_data/: __init__.py  _logging.py  adapters.py  allowlist.py  capacity_probe.py  cli.py  collector.py  coverage_stats.py  cutoff.py  dedup.py  diagnostic.py  heartbeat.py  (+20 more)
tests/: conftest.py  test_active_active_writer.py  test_adapters.py  test_adr018_d1_d3.py  test_cli.py  test_cli_node_id.py  test_cli_promote_historical.py  test_cli_query.py  test_cli_status.py  test_collector.py  test_collector_manifest.py  test_collector_redis.py  test_compactor_l1.py  test_compactor_l2.py  test_compactor_l3.py  test_coverage_stats.py  test_dedup.py  test_diagnostic.py  test_duckdb_reader.py  test_effective_config.py  test_health_server.py  test_heartbeat.py  test_heartbeat_sink.py  test_io_stats_no_engine_dep.py  test_lineage.py  test_measure_wal_baseline.py  test_metadata_read.py  test_metadata_storage.py  test_metrics_endpoint.py  test_multi_exchange_invariant.py  test_node_coverage.py  test_orderbook_replay.py  test_orderbook_snapshot_read.py  test_orderbook_snapshot_storage.py  test_orderbook_storage.py  test_paper_storage.py  test_path.py  test_persist_quarantine.py  test_policy.py  test_redis_publisher.py  (+13 more)
tools/: compactor-tracemalloc.py
(+251 files in other folders)
