[project]
name = "mctrader-data"
version = "0.9.0"
description = "OHLCV + Tick + Orderbook collector + reconstruction + Parquet/DuckDB - mctrader platform"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "mccho8865", email = "mccho8865@gmail.com" }]
dependencies = [
    "mctrader-market @ git+https://github.com/mclayer/mctrader-market.git@main",
    "mctrader-market-bithumb @ git+https://github.com/mclayer/mctrader-market-bithumb.git@main",
    "mctrader-market-upbit @ git+https://github.com/mclayer/mctrader-market-upbit.git@main",
    "pydantic>=2,<3",
    "duckdb>=1,<2",
    "pyarrow>=17",
    "click>=8",
    "httpx>=0.27",
    "pytz",
    "boto3>=1.34",
    "redis[hiredis]>=5",
    "prometheus-client>=0.20",
    "pyyaml>=6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pyright>=1.1",
    "ruff>=0.6",
    "testcontainers[minio]>=4.8",  # MCT-180 D11 testcontainers boundary test
]

[project.scripts]
mctrader-data = "mctrader_data.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mctrader_data"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["UP017", "N801", "N818", "SIM300", "I001"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "real_nas: marks tests that require real NAS MinIO endpoint (skip if NAS_MINIO_ENDPOINT not set)",
]

[dependency-groups]
dev = [
    "psutil>=7.2.2",
    "pyright>=1.1.409",
    "pytest-benchmark>=4.0",
    "testcontainers[minio]>=4.14.2",
]
